# filmdb

./: pyproject.toml
filmdb/filmdb/: asgi.py  settings.py  urls.py  wsgi.py
filmdb/films/: admin.py
filmdb/films/management/commands/: get_imdb_data.py  libib_source.py  reset_test_db.py
filmdb/films/migrations/: 0001_initial.py  0002_alter_film_imdb_rating.py  0003_alter_film_image_url.py
filmdb/films/models/: __init__.py  film.py  film_copy.py
filmdb/helpers/: utils.py
filmdb/helpers/scraping/: cleaners.py  http_client.py  parsel_utils.py
filmdb/helpers/scraping/imdb/: __init__.py  imdb_detail_scraper.py  imdb_search_scraper.py  scraper.py
filmdb/helpers/scraping/libib/: __init__.py  libib_detail_scraper.py  libib_list_scraper.py  scraper.py
tests/: test_filmdb.py
