[tool.poetry]
name = "filmdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-extensions = "^3.1.3"
requests = "^2.26.0"
parsel = "^1.6.0"
fake-headers = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.26.0"
Werkzeug = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
